# Holly

./: CHANGELOG.md  LICENSE  README.md  holly.cabal
app/: Main.hs
src/Data/: Board.hs
test/Data/: BoardSpec.hs
