name:                holly
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Nolrai/holly#readme
license:             BSD3
license-file:        LICENSE
author:              Christina Upshaw
maintainer:          chrisaupshaw@gmail.com
copyright:           2023 Christina Upshaw
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Board
  build-depends:       base >= 4.7 && < 5
                      , lens
                      , array
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable holly
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , holly
                     , gloss
                     , bmp
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite holly-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Data.BoardSpec
  build-depends:       base
                     , holly
                     , hspec
                     , QuickCheck
                     , array
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/Nolrai/holly
